--- a/newsletter/index.html
+++ b/newsletter/index.html
@@ -158,7 +158,7 @@
                         <div class="container_img"><img src="http://lorempixel.com/600/240/people/" alt="" editable="true" class="item_img" width="600"></div>
                         <div class="bloc_text">
                           <multiline label="bloc_content">
-                            <p><strong>Notre ogranisation en 3 phrases clés</strong></p>
+                            <p><strong>Notre organisation en 3 phrases clés</strong></p>
                             <p>
                               Notre mission
                             </p>
